--- a/index.html
+++ b/index.html
@@ -165,6 +165,33 @@
     </div>
 
     <!-- Add Category Modal -->
+    <div id="category-modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Add New Category</h2>
+        <form action="category-form">
+          <div class="form-group">
+            <label for="category-name">Category Name</label>
+            <input
+              type="text"
+              id="category-name"
+              required
+              placeholder="e.g., Groceries"
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="category-color">Color</label>
+            <div class="color-picker">
+              <input type="color" id="category-color" value="#6366f1" />
+              <div id="color-preview" class="color-preview"></div>
+            </div>
+          </div>
+
+          <button></button>
+        </form>
+      </div>
+    </div>
     <script
       src="https://kit.fontawesome.com/5885fdb321.js"
       crossorigin="anonymous"
