--- a/index.html
+++ b/index.html
@@ -188,8 +188,65 @@
             </div>
           </div>
 
-          <button></button>
+          <button type="submit" class="btn btn-primary">Add Category</button>
         </form>
+      </div>
+    </div>
+
+    <!-- Edit Expense Modal -->
+    <div id="edit-modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Edit Expense</h2>
+        <form id="edit-form">
+          <input type="hidden" id="edit-id" />
+          <div class="form-group">
+            <label for="edit-amount">Amount ($)</label>
+            <input
+              type="number"
+              id="edit-amount"
+              step="0.01"
+              min="0.01"
+              required
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="edit-category">Category</label>
+            <select id="edit-category" required>
+              <!-- Categories will be populated by JavaScript -->
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label for="edit-description">Description</label>
+            <textarea id="edit-description" required></textarea>
+          </div>
+
+          <div class="form-group">
+            <label for="edit-date">Date</label>
+            <input type="date" id="edit-date" required />
+          </div>
+
+          <button type="submit" class="btn btn-primary">Update Expense</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Delete Confirmation Modal -->
+    <div id="delete-modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Confirm Delete</h2>
+        <p>
+          Are you sure you want to delete this expense? This action cannot be
+          undone.
+        </p>
+        <input type="hidden" id="delete-id" />
+        <div class="modal-actions">
+          <button id="cancel-delete" class="btn">Cancel</button>
+          <button id="confirm-delete" class="btn btn-danger">Delete</button>
+        </div>
       </div>
     </div>
     <script
