--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h2>Add New Expense</h2>
           <form id="expense-form">
             <div class="form-group">
-              <label for="amount">Amount (NGN)</label>
+              <label for="amount">Amount (₦)</label>
               <input
                 type="number"
                 id="amount"
@@ -65,7 +65,7 @@
           <div class="summary-container">
             <div class="summary-card">
               <h3>Total Expense</h3>
-              <p id="total-amount">NGN0.00</p>
+              <p id="total-amount">₦0.00</p>
               <small id="expense-count">0 expenses</small>
             </div>
 
@@ -77,7 +77,7 @@
 
             <div class="summary-card">
               <h3>Average Expense</h3>
-              <p id="average-expense">NGN0.00</p>
+              <p id="average-expense">₦0.00</p>
               <small>Per transaction</small>
             </div>
           </div>
@@ -201,7 +201,7 @@
         <form id="edit-form">
           <input type="hidden" id="edit-id" />
           <div class="form-group">
-            <label for="edit-amount">Amount ($)</label>
+            <label for="edit-amount">Amount (₦)</label>
             <input
               type="number"
               id="edit-amount"
