Expense tracker: Implementing functionalities

--- a/index.html
+++ b/index.html
@@ -253,6 +253,6 @@
       src="https://kit.fontawesome.com/5885fdb321.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
